# voiceclone

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
backend/: .env.example  build_sidecar.sh  pyproject.toml  run_server.py
backend/app/: cancellation.py  config.py  main.py
backend/app/api/: cancellation.py  dependencies.py  routes_engine.py  routes_models.py  routes_profiles.py  routes_synthesis.py  routes_transcription.py  schemas.py
backend/app/audio/: converter.py  wav.py
backend/app/domain/: errors.py  profile.py  values.py
backend/app/engine/: base.py  fake_engine.py  hf_progress.py  management.py  omnivoice_engine.py  readiness.py
backend/app/models/: __init__.py  huggingface_cache.py  managed_model.py  registry.py
backend/app/services/: profile_service.py  synthesis_service.py  transcription_service.py
backend/app/storage/: database.py  profile_repository.py
backend/app/text/: segmentation.py
backend/app/transcription/: base.py  fake_transcriber.py  whisper_transcriber.py
backend/tests/: conftest.py  test_api.py  test_cancellation.py  test_engine_status.py  test_hf_progress.py  test_model_registry.py  test_models_routes.py  test_mps_watermark.py  test_profile_service.py  test_segmentation.py  test_synthesis_service.py  test_transcription.py  test_values.py
frontend/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
frontend/src-tauri/binaries/: README.md
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: README.md  icon.icns
frontend/src-tauri/src/: main.rs
(+48 files in other folders)
