[project]
name = "voiceclone-backend"
version = "0.1.0"
description = "Registration-free voice cloning API powered by OmniVoice"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "soundfile>=0.12",
]

[project.optional-dependencies]
# Heavy ML deps — install only when running the real engine.
omnivoice = [
    "omnivoice",
    "torch",
    "torchaudio",
    # Faster weight downloads from Xet-backed HF repos (optional perf).
    "hf_xet",
]
# Whisper auto-transcription (optional; ENGINE-independent).
whisper = [
    "faster-whisper>=1.0",
    # Faster Whisper model downloads from Xet-backed HF repos (optional perf).
    "hf_xet",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
