[package]
name = "voiceclone"
version = "0.1.0"
description = "VoiceClone desktop app"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Required by Tauri to know whether the build is a release/debug bundle.
custom-protocol = ["tauri/custom-protocol"]
